--- a/notebooks/TADs.Rmd
+++ b/notebooks/TADs.Rmd
@@ -28,24 +28,21 @@ knitr::opts_chunk$set(
     dpi=300
 )
 ```
-Set up file locations
-```{r locations, results=FALSE}
+Set up file locations + load dependenies
+```{r file_locs, results=FALSE, message=FALSE, warning=FALSE}
 library(here)
-BASE_DIR=here()
-source(file.path(BASE_DIR, 'scripts/locations.R'))
-```
-Load dependencies
-```{r deps}
+BASE_DIR <- here::i_am('notebooks/TADs.Rmd')
+SCRIPT_DIR <- here('scripts')
+source(file.path(SCRIPT_DIR, 'locations.R'))
+source(file.path(SCRIPT_DIR, 'constants.R'))
+source(file.path(SCRIPT_DIR, 'utils.data.R'))
+source(file.path(SCRIPT_DIR, 'utils.plot.R'))
+source(file.path(SCRIPT_DIR, 'utils.TADs.R'))
 library(tidyverse)
 library(magrittr)
-source(file.path(BASE_DIR, 'scripts/utils.data.R'))
-source(file.path(BASE_DIR, 'scripts/utils.plot.R'))
-source(file.path(BASE_DIR, 'scripts/utils.TADs.R'))
-```
-Load sample metadata
-```{r load_metadata, message=FALSE, rows.print=5}
-sample.metadata <- load_sample_metadata()
-sample.metadata
+library(ggplot2)
+library(ggh4x)
+library(purrr)
 ```
 
 # Load all TAD annotations
