--- a/notebooks/replicate.robinson.results.Rmd
+++ b/notebooks/replicate.robinson.results.Rmd
@@ -28,23 +28,21 @@ knitr::opts_chunk$set(
     dpi=300
 )
 ```
-Set up file locations
-```{r locations, results=FALSE, message=FALSE}
+Set up file locations + load dependenies
+```{r file_locs, results=FALSE, message=FALSE, warning=FALSE}
 library(here)
-BASE_DIR=here()
-source(file.path(BASE_DIR, 'scripts/locations.R'))
-```
-Load dependencies
-```{r deps, message=FALSE}
+BASE_DIR <- here::i_am('notebooks/replicate.robinson.results.Rmd')
+SCRIPT_DIR <- here('scripts')
+source(file.path(SCRIPT_DIR, 'locations.R'))
+source(file.path(SCRIPT_DIR, 'constants.R'))
+source(file.path(SCRIPT_DIR, 'utils.data.R'))
+source(file.path(SCRIPT_DIR, 'utils.plot.R'))
+source(file.path(SCRIPT_DIR, 'utils.robinson.R'))
 library(tidyverse)
 library(magrittr)
-source(file.path(BASE_DIR, 'scripts/utils.data.R'))
-source(file.path(BASE_DIR, 'scripts/utils.plot.R'))
-source(file.path(BASE_DIR, 'scripts/utils.robinson.R'))
-# {r load_metadata, message=FALSE, rows.print=5, eval=FALSE}
-# Load sample metadata
-sample.metadata <- load_sample_metadata()
-# sample.metadata
+library(ggplot2)
+library(ggh4x)
+library(purrr)
 ```
 Load contact matrices for each file + Annotate region-pair of interest for each bin-pair (contacts, 1 per row)
 ```{r load_contacts, rows.print=5}
