--- a/notebooks/matrix.QC.Rmd
+++ b/notebooks/matrix.QC.Rmd
@@ -4,6 +4,7 @@ author: "Siddharth Reed"
 date: "`r Sys.Date()`"
 output: 
     html_document:
+        keep_md: true
         toc: true
         toc_float: true
         theme: paper
@@ -31,7 +32,8 @@ knitr::opts_chunk$set(
 Set up file locations + load dependenies
 ```{r file_locs, results=FALSE, message=FALSE, warning=FALSE}
 library(here)
-BASE_DIR <- here::i_am('notebooks/matrix.QC.Rmd')
+here::i_am('notebooks/matrix.QC.Rmd')
+BASE_DIR <- here()
 SCRIPT_DIR <- here('scripts')
 source(file.path(SCRIPT_DIR, 'locations.R'))
 source(file.path(SCRIPT_DIR, 'constants.R'))
@@ -44,29 +46,69 @@ library(ggplot2)
 library(ggh4x)
 library(purrr)
 library(downloadthis)
-sample.metadata <- load_sample_metadata()
 ```
 Load output of `pairtools stats` 
 ```{r load_stats, rows.print=5, message=FALSE, results=FALSE}
 pair.stats.list <- load_pairtools_stats()
-# pair.stats.list$general.stats
-# pair.stats.list$distance.stats
-# pair.stats.list$chr.stats
 ```
-Load genome coverage from `cooltools coverage`
-```{r load_coverage, rows.print=5}
-genome.coverage <- 
-    check_cached_results( 
-        results_file=NULL,
+
+# Calculate minimum resolution from pair orientations
+
+The minimum usable resolution for a HiC dataset is defined in [Rao et al. 2014](https://www.cell.com/cell/fulltext/S0092-8674(14)01497-4?cc=y%3D) as follows
+
+>We define the “matrix resolution” of a Hi-C map as the locus size used to construct a particular contact matrix and the “map resolution” as the smallest locus size such that 80% of loci have at least 1,000 contacts.
+
+```{r calc_resolution, include=FALSE}
+coverage.summary <- 
+    check_cached_results(
+        results_file=RESOLTION_COVERAGE_SUMAMRY_FILE,
         force_redo=FALSE,
         return_data=TRUE,
-        results_fnc=load_genome_coverage,
-        weights=c('raw'),
-        resolutions=c(5000, 10000, 25000)
+        show_col_types=FALSE,
+        results_fnc=get_all_matrix_minimum_resolutions,
+        resolutions=c(100000, 50000, 25000, 10000, 5000, 2000)
+    )
+```
+Now print all resolutions which are usable according to the Rao et al. 2014 definition
+```{r print_valid_resolutions, paged.print=TRUE, max.print=10000}
+min.resolutions <- 
+    coverage.summary %>% 
+    filter(
+        ReadFilter == 'mapq_30',
+        metric == 'cis',
+        chr == 'genome.wide',
+        bins.pct.covered >= 0.80
     ) %>% 
-    mutate(resolution=as.integer(resolution)) %>% 
-    select(-c(filepath))
-genome.coverage
+    group_by(Sample.ID) %>% 
+    slice_min(
+        resolution, 
+        n=1
+    ) %>% 
+    ungroup() %>% 
+    select(
+        Sample.ID,
+        resolution,
+        bins.pct.covered,
+        bins.n.covered,
+        bins.n.total
+    ) %>%
+    mutate(
+        bins.pct.covered=sprintf("%0.1f%%", bins.pct.covered * 100),
+        resolution=
+            factor(
+                scale_numbers(resolution),
+                levels=scale_numbers(sort(unique(resolution)))
+            )
+    ) %>% 
+    rename(
+        'Min. Viable Resolution'=resolution, 
+        '% Bins >= 1K'=bins.pct.covered,
+        '# Bins >= 1K'=bins.n.covered,
+        '# Total Bins'=bins.n.total
+    ) %>%
+    arrange(Sample.ID) %T>%
+    write_tsv(MIN_SAMPLE_RESOLUTION_FILE)
+min.resolutions
 ```
 
 # Plot pairs by distance {.tabset}
@@ -112,75 +154,6 @@ pairs.plot.df %>%
         scale_y_method='pct',
         scales='fixed',
     )
-```
-
-# Calculate minimum resolution from pair orientations
-
-The minimum usable resolution for a HiC dataset is defined in [Rao et al. 2014](https://www.cell.com/cell/fulltext/S0092-8674(14)01497-4?cc=y%3D) as follows
-
->We define the “matrix resolution” of a Hi-C map as the locus size used to construct a particular contact matrix and the “map resolution” as the smallest locus size such that 80% of loci have at least 1,000 contacts.
-
-```{r calc_resolution, include=FALSE}
-# Variables to count coverage across
-grouping_cols <- 
-    genome.coverage %>%
-    colnames() %>%
-    {.[!grepl("(start|end|coverage)", .)]}
-# print(grouping_cols)
-coverage.summary <- 
-    genome.coverage %>%
-    group_by(across(grouping_cols)) %>%
-    summarize(
-        bins.n.nz=sum(coverage > 0),
-        bins.n.covered=sum(coverage > 1000),
-        bins.n.total=n()
-    ) %>%
-    ungroup() %>%
-    # Calculate totals by summing per chr values
-    bind_rows(
-        .,
-        {.} %>%
-        group_by(across(grouping_cols[!grepl("chr", grouping_cols)])) %>% 
-        summarize(
-            across(
-                starts_with('bins.n.'),
-                ~ sum(.x)
-            )
-        ) %>%
-        add_column(chr='genome.wide')
-    ) %>%
-    mutate(
-        bins.pct.nz=bins.n.nz / bins.n.total,
-        bins.pct.covered=bins.n.covered / bins.n.total
-    )
-```
-Now print all resolutions which are usable according to the Rao et al. 2014 definition
-```{r print_valid_resolutions, paged.print=TRUE, max.print=10000}
-coverage.summary %>% 
-    filter(chr == 'genome.wide') %>%
-    filter(weight == 'raw') %>% 
-    filter(ReadFilter == 'mapq_30') %>% 
-    filter(metric == 'cis') %>% 
-    filter(bins.pct.covered >= 0.80) %>% 
-    group_by(Sample.ID) %>% 
-    slice_min(resolution, n=1) %>% 
-    left_join(RESOLUTION_NAMES, by='resolution') %>% 
-    mutate(bins.pct.covered=sprintf("%0.1f%%", bins.pct.covered * 100)) %>% 
-    select(
-        Sample.ID,
-        resolution.name,
-        bins.pct.covered,
-        bins.n.covered,
-        bins.n.total
-    ) %>%
-    arrange(Sample.ID, resolution.name) %>% 
-    rename(
-        'Usable Resolution'=resolution.name, 
-        '% Bins >= 1K'=bins.pct.covered,
-        '# Bins >= 1K'=bins.n.covered,
-        '# Total Bins'=bins.n.total,
-    ) %>%
-    kable(align=c('l', 'r', 'r', 'r', 'r'))
 ```
 
 # Plot read orientation frequency over distance
